<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.miguel.micontacto.ConfirmarDatos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmar_datos"
        android:textSize="@dimen/text_size"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_top"/>

        <TextView
            android:id="@+id/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="@dimen/text_size_nombre"
            android:layout_marginTop="@dimen/text_size"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/campo_fechanacimiento"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fechanacimiento"
                android:layout_marginLeft="@dimen/margin_top"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/campo_telefono"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefono"
                android:layout_marginLeft="@dimen/margin_top"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/campo_email"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginLeft="@dimen/margin_top"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/campo_descripcion"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/descripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descripcion"
                android:layout_marginLeft="@dimen/margin_top"/>


        </LinearLayout>





        <Button
            android:id="@+id/btn_editar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editar_datos"
            android:layout_marginTop="@dimen/text_size"/>

    </LinearLayout>




</FrameLayout>
